# FlyHigh

./: .gitignore  AUTHORS  CMakeLists.txt  Functions.cmake  INSTALL  Makefile  Makefile.in  NEWS  README  README.md  TODO  config.h.in  configure  configure.in  configure.in.in  flyhigh.cbp  flyhigh.files  flyhigh.includes  flyhigh.kdev4  flyhigh.kdevelop  flyhigh.kdevelop.pcs  flyhigh.spec  install
flyhigh/src/database/: .tableHowTo.swp  IDataBase.cpp  IDataBase.h  IFlyHighRC.cpp  IFlyHighRC.h  IGPSDevice.cpp  IGPSDevice.h  ISql.cpp  ISql.h  Makefile.am  Makefile.in
src/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  Makefile.am  flyhigh.desktop  flyhigh.lsm  main.cpp
src/analysis/: CMakeLists.txt  FlightExpWindow.cpp  FlightExpWindow.h  FlightPointList.cpp  FlightPointList.h  FlightWindow.cpp  FlightWindow.h  GliderWindow.cpp  GliderWindow.h  IGCFileParser.cpp  IGCFileParser.h  KmlWriter.cpp  KmlWriter.h  Makefile.am  OLCOptimizer.cpp  OLCOptimizer.h  OLCWebForm.cpp  OLCWebForm.h  ServicingWindow.cpp  ServicingWindow.h  WebMapFlightView.cpp  WebMapFlightView.h
src/common/: CMakeLists.txt  Makefile.am  Makefile.in
src/common/container/: Account.h  AirSpace.cpp  AirSpace.h  AirSpaceItem.cpp  AirSpaceItem.h  AirSpaceItemList.cpp  AirSpaceItemList.h  AirSpaceList.cpp  AirSpaceList.h  BoundBox.cpp  BoundBox.h  CMakeLists.txt  ContainerDef.h  Flight.cpp  Flight.h  FlightPoint.cpp  FlightPoint.h  FlightPointList.cpp  FlightPointList.h  Glider.cpp  Glider.h  LatLng.cpp  LatLng.h  Makefile.am  Makefile.in  OpenAir.cpp  OpenAir.h  OpenAirItem.cpp  OpenAirItem.h  Photo.cpp  Photo.h  Pilot.cpp  Pilot.h  Route.cpp  Route.h  Servicing.cpp  Servicing.h  WayPoint.cpp  WayPoint.h
src/common/elevation/: CMakeLists.txt  Elevation.cpp  Elevation.h  ElevationDef.cpp  ElevationDef.h  ElevationSet.cpp  ElevationSet.h  ElevationSetList.cpp  ElevationSetList.h  ElevationTile.cpp  ElevationTile.h  ElevationTileList.cpp  ElevationTileList.h  SrtmReader.cpp  SrtmReader.h
src/common/form/: AccountForm.ui  AccountFormImpl.cpp  AccountFormImpl.h  AirSpaceForm.ui  AirSpaceFormImpl.cpp  AirSpaceFormImpl.h  CMakeLists.txt  CredentialsDlg.h  DatabaseWidget.cpp  DatabaseWidget.h  ErrorWindow.cpp  FlightForm.ui  FlightFormImpl.cpp  FlightFormImpl.h  GliderForm.ui  GliderFormImpl.cpp  GliderFormImpl.h  IAccountForm.cpp  IAccountForm.h  IAirSpaceForm.cpp  IAirSpaceForm.h  ICTRForm.cpp  ICTRForm.h  IFlightForm.cpp  IFlightForm.h  IGliderForm.cpp  IGliderForm.h  IRouteForm.cpp  IRouteForm.h  IServicingForm.cpp  IServicingForm.h  IUploadForm.cpp  IUploadForm.h  IWayPointForm.cpp  IWayPointForm.h  MDIWindow.cpp  MDIWindow.h  Makefile.am  Makefile.in  MigrationDlg.cpp  (+19 more)
src/common/map/: CMakeLists.txt  Map.cpp  Map.h  MapTile.cpp  MapTile.h  MapView.cpp  MapView.h  MapWidget.cpp  MapWidget.h  SwissGrid.cpp  SwissGrid.h  SwissMap100.cpp  SwissMap100.h
src/common/qextmedia/: CMakeLists.txt  qexifimageheader.cpp  qexifimageheader.h
src/common/qextserialport/: CMakeLists.txt  FindUDev.cmake  posix_qextserialport.cpp  qextserialenumerator.cpp  qextserialenumerator_win.cpp  qextserialport.cpp  qextserialport_global.h
src/common/qjson4/: CMakeLists.txt
src/common/utils/: CMakeLists.txt  Error.cpp  Error.h  GnuPlot.cpp  GnuPlot.h  IGCFileParser.h  Makefile.am  Makefile.in  OpenAirFileParser.cpp  OpenAirFileParser.h  Tokenizer.cpp  Tokenizer.h  Vector.cpp  Vector.h  simplecrypt.cpp
src/common/webmap/: CMakeLists.txt  PolyLineEncoder.cpp  PolyLineEncoder.h  WebMap.cpp  WebMap.h  WebMapAirSpace.cpp  WebMapAirSpace.h  WebMapAirSpaceView.cpp  WebMapAirSpaceView.h  WebMapFaiSector.cpp  WebMapFaiSector.h  WebMapFlight.cpp  WebMapFlight.h  WebMapFlightView.cpp  WebMapFlightView.h  WebMapItem.cpp  WebMapItem.h  WebMapLeg.cpp  WebMapLeg.h  WebMapOverlay.cpp  WebMapOverlay.h  WebMapOverlayItem.cpp  WebMapOverlayItem.h  WebMapOverlayScene.cpp  WebMapOverlayScene.h  WebMapRoute.cpp  WebMapRoute.h  WebMapRouteView.cpp  WebMapRouteView.h  WebMapScene.cpp  WebMapScene.h  WebMapTrack.cpp  WebMapTrack.h  WebMapTurnPoint.cpp  WebMapTurnPoint.h  WebMapWayPoint.cpp  WebMapWayPoint.h  WebMapWayPointView.cpp  WebMapWayPointView.h  WebMapWidget.cpp  (+1 more)
src/common/window/: CMakeLists.txt  MDIWindow.cpp  MDIWindow.h  MigrationDlg.h  PhotoView.cpp  PhotoView.h  ProgressDlg.cpp  ProgressDlg.h  TableWindow.cpp  TableWindow.h
src/configuration/: CMakeLists.txt  Makefile.am
src/configuration/database/: CMakeLists.txt  FlyHighRCFrame.ui  FlyHighRCFrameImpl.cpp  FlyHighRCFrameImpl.h  IFlyHighRCFrame.cpp
src/configuration/flytec/: AcousticFrame.ui  AcousticFrameImpl.cpp  AcousticFrameImpl.h  CMakeLists.txt  CorrFrame.ui  CorrFrameImpl.cpp  CorrFrameImpl.h  DeviceFrame.ui  DeviceFrameImpl.cpp  DeviceFrameImpl.h  (+36 more)
src/database/: CMakeLists.txt  DatabaseParameters.cpp  DatabaseParameters.h  IDataBase.cpp  IDataBase.h  IFlyHighRC.cpp  IFlyHighRC.h  IGPSDevice.cpp  IGPSDevice.h  ISql.cpp  ISql.h  Makefile.am  Makefile.in
src/images/: CMakeLists.txt  Images.cpp  Images.h  ImgCollection.cpp  Makefile.am  Makefile.img  images.qrc
src/preparation/: AirSpaceView.cpp  AirSpaceView.h  AirSpaceWindow.cpp  AirSpaceWindow.h  CMakeLists.txt  Makefile.am  OpenAirFileParser.cpp  OpenAirFileParser.h  RouteWindow.cpp  RouteWindow.h  WayPointWindow.cpp  WayPointWindow.h  WebMapRouteView.cpp  WebMapRouteView.h  WebMapRouteWindow.cpp  WebMapRouteWindow.h  WptFileParser.cpp  WptFileParser.h
src/res/: CMakeLists.txt  airspace.html  data.js  flight.html  index.html  res.qrc  route.html  waypoint.html  webmap.html  webmap_analysis.html  webmap_flight.html  webmap_route.html
src/settings/: CMakeLists.txt  DbSettingsDlg.cpp  DbSettingsDlg.h  FlyHighSettingsDlg.cpp  FlyHighSettingsDlg.h
src/tools/: CMakeLists.txt
src/upload/: Account.cpp  Account.h  AccountWindow.cpp  AccountWindow.h  CMakeLists.txt  IOLCUploader.cpp  IOLCUploader.h  OLCUploaderFactory.cpp  OLCUploaderFactory.h  XContestAdditionalInfoDlg.cpp  XContestAdditionalInfoDlg.h  XContestAdditionalInfoWidgetFactory.cpp  XContestAdditionalInfoWidgetFactory.h  XContestUploader.cpp  XContestUploader.h
(+510 files in other folders)
