INCLUDES = -I$(top_srcdir)/src/common/container -I$(top_srcdir)/src/common/form -I$(top_srcdir)/src/common/utils -I$(top_srcdir)/src/database -I$(top_srcdir)/src/images $(all_includes)
METASOURCES = AUTO
lib_LIBRARIES =  libanalysis.a
libanalysis_a_SOURCES = IGCFileParser.cpp FlightWindow.cpp OLCOptimizer.cpp \
		FlightPointList.cpp FlightExpWindow.cpp ServicingWindow.cpp




noinst_HEADERS = IGCFileParser.h FlightWindow.h OLCOptimizer.h \
		FlightPointList.h FlightExpWindow.h ServicingWindow.h
