INCLUDES = -I$(top_srcdir)/src/common/container -I$(top_srcdir)/src/common/form -I$(top_srcdir)/src/common/utils -I$(top_srcdir)/src/database -I$(top_srcdir)/src/images $(all_includes)
METASOURCES = AUTO
lib_LIBRARIES =  libanalysis.a
libanalysis_a_SOURCES = FlightWindow.cpp OLCOptimizer.cpp FlightPointList.cpp \
		FlightExpWindow.cpp ServicingWindow.cpp IGCFileParser.cpp OLCWebForm.cpp




noinst_HEADERS = FlightWindow.h OLCOptimizer.h FlightPointList.h \
		FlightExpWindow.h ServicingWindow.h IGCFileParser.h OLCWebForm.h
