INCLUDES = -I$(top_srcdir)/src/common/container -I$(top_srcdir)/src/common/form \
	-I$(top_srcdir)/src/common/utils -I$(top_srcdir)/src/common/map -I$(top_srcdir)/src/database \
	-I$(top_srcdir)/src/images $(all_includes)
METASOURCES = AUTO
lib_LIBRARIES =  libanalysis.a
libanalysis_a_SOURCES = FlightExpWindow.cpp FlightPointList.cpp \
	FlightWindow.cpp GliderWindow.cpp IGCFileParser.cpp KmlWriter.cpp OLCOptimizer.cpp \
	OLCWebForm.cpp ServicingWindow.cpp




noinst_HEADERS = FlightExpWindow.h FlightPointList.h FlightWindow.h \
	GliderWindow.h IGCFileParser.h KmlWriter.h OLCOptimizer.h OLCWebForm.h \
	ServicingWindow.h
