INCLUDES = -I$(top_srcdir)/src/analysis -I$(top_srcdir)/src/common -I$(top_srcdir)/src/common/container -I$(top_srcdir)/src/common/form -I$(top_srcdir)/src/configuration/flytec -I$(top_srcdir)/src/configuration/interface -I$(top_srcdir)/src/database -I$(top_srcdir)/src/device -I$(top_srcdir)/src/device/flytec -I$(top_srcdir)/src/images -I$(top_srcdir)/src/track $(all_includes)
METASOURCES = AUTO
lib_LIBRARIES =  libpreparation.a
noinst_HEADERS = WayPointWindow.h RouteWindow.h
libpreparation_a_SOURCES = WayPointWindow.cpp RouteWindow.cpp
