INCLUDES = $(all_includes)
METASOURCES = AUTO
lib_LIBRARIES =  libcontainer.a
libcontainer_a_SOURCES = AirSpace.cpp AirSpaceItem.cpp BoundBox.cpp Flight.cpp \
	Glider.cpp Pilot.cpp Route.cpp Servicing.cpp WayPoint.cpp
noinst_HEADERS = Route.h ContainerDef.h Servicing.h AirSpace.h AirSpaceItem.h \
	Pilot.h
